deploy/simpleweb-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simpleweb
  namespace: simpleweb
  labels:
    app.kubernetes.io/name: simpleweb
spec:
  path: "/"
  to:
    kind: Service
    name: simpleweb
